Update snowflake.md