@@ -10,6 +10,10 @@ Integrity constraints are often missing in Snowflake. Make sure to specify the m
 We recommend using [lenses](/guide/advanced/lenses) for this purpose.
 :::
 
+:::warning
+If you want to use the Snowflake JDBC Driver with Java 17, the following option must be added to the JVM `--add-opens java.base/java.nio=ALL-UNNAMED`.
+:::
+
 - Due to an issue in the JDBC, quotation marks cannot always be used when defining an alias. Because of this, it is recommended to choose column names without special characters where possible.
 - Accessing struct fields with the "colon operator" is not supported (see below).
 
